fixed resident card sizing on smaller viewports

--- a/src/components/resident-card/residentCard.scss
+++ b/src/components/resident-card/residentCard.scss
@@ -59,11 +59,13 @@
   .ram-resident-card {
     flex-direction: column;
     flex-basis: auto;
+    width: 100%;
 
     .ram-resident-card-img {
       border-radius: 8px 8px 0 0;
       width: 100%;
       max-height: 250px;
+      overflow: hidden;
       // max-width: unset;
     }
   }
